[workspace]
members = ["examples/rpi_ws2812"]

[package]
name    = "rainbow_emanator"
version = "0.1.0"
authors = ["Damian J Pound <damian@thebestisp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = { version = "0.6.0", default-features = false, features = ["libm"] }
